# open-env-email

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  rule_based_results.json  validate.py
.config/: .last_survey_prompt.yaml  .last_update_check.json
baseline/: agent.py
env/: email_env.py  graders.py  models.py  reward.py
env/data/: emails.json
server/: app.py
